# substrate-debug-kit

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  UDPATE.md  build_readmes.sh  cli.yml  example_output  example_output.json  rustfmt.toml  test_all.sh  update_cargo.js
laboratory/: Cargo.toml  README.md
laboratory-js/: .gitignore  block_explorer.js  example.js  package-lock.json  package.json
laboratory-js/remote-ext-phragmms/: Cargo.toml
laboratory-js/src/: index.ts  lab.ts
laboratory/remote-ext-elections-phragmen/: Cargo.toml
laboratory/remote-ext-elections-phragmen/js/: effective_kusama.csv  elections.kusama.json  elections.polkadot.json  package-lock.json  package.json
laboratory/remote-ext-elections-phragmen/js/src/: index.ts
laboratory/remote-ext-elections-phragmen/src/: elections.kusama  main.rs
laboratory/remote-ext-phragmms/: Cargo.toml  kusama.csv
laboratory/remote-ext-phragmms/src/: main.rs
laboratory/remote-ext-society/: Cargo.toml
laboratory/src/: main.rs  network.rs
migration-dry-run/: .gitignore  Cargo.toml  README.md
migration-dry-run/.cargo/: config
migration-dry-run/src/: main.rs
offline-election/: Cargo.toml  PHRAGMEN.md  README.md  cli.yml  output.json  override_example.json  predict2.json  predict3.json  predict4.json
offline-election/src/: main.rs  network.rs  primitives.rs  timing.rs
offline-election/src/subcommands/: current.rs  dangling_nominators.rs  elections_phragmen.rs  mod.rs  nominator_check.rs  staking.rs  validator_check.rs
offline-election/tests/: cli.rs  mock.rs  test.rs
phragmms-remote-test/: Cargo.toml  polkadot.csv
phragmms-remote-test/src/: main.rs
playground/: Cargo.toml
playground/src/: main.rs
polkadot-mock-runtime/: Cargo.toml
polkadot-mock-runtime/src/: common.rs  kusama_mock.rs  lib.rs  main.rs
polkadot-mock-runtime/src/polkadot_runtime/: consensus_system.rs  mod.rs
remote-ext-elections-phragmen/: Cargo.toml  expanded.rs
remote-ext-elections-phragmen/js/: council.csv  effective_polkadot.csv  elections.kusama.json  elections.polkadot.json  js.out  tsconfig.json
remote-ext-elections-phragmen/js/src/: index.ts
remote-ext-elections-phragmen/src/: elections.polkadot  main.rs
remote-ext-phragmms/: Cargo.toml  polkadot.csv
remote-ext-society/src/: main.rs
remote-ext-staking/: Cargo.toml
remote-ext-staking/src/: main.rs
remote-externalities/: Cargo.toml  README.md
remote-externalities/remote-ext-elections-phragmen/: Cargo.toml
remote-externalities/remote-ext-phragmms/: kusama.csv
remote-externalities/src/: lib.rs
src/: elections_phragmen.rs  main.rs  mock.rs  network.rs  offchain_phragmen.rs  primitives.rs  staking.rs  storage.rs  timing.rs
src/subcommands/: dangling_nominators.rs  elections_phragmen.rs  mod.rs  playground.rs  staking.rs
staking-miner/: .gitignore  Cargo.toml
staking-miner/src/: main.rs  mock_runtime.rs  offchain_miner.rs  polkadot_weight.rs
sub-du/: Cargo.toml  README.md
sub-du/src/: main.rs
sub-du/tests/: cli.rs
sub-storage/: Cargo.toml  build.rs
sub-storage/src/: helpers.rs  lib.rs
sub-tokens/: Cargo.toml  README.md
sub-tokens/src/: lib.rs
substrate-runtime-dry-run/: Cargo.toml
substrate-runtime-dry-run/src/: main.rs
tokens/: Cargo.toml
tokens/src/: lib.rs
