[package]
name = "offline-phragmen"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
async-std = "1.2.0"
url = "1.7.0"
log = "0.4.8"
env_logger = "0.7.1"
separator = "0.4.1"
hex = "0.4"
hex-literal = "0.2.1"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", rev = "a0bea41c4f37125fa742ec48b12e11cf55c592b5", features = ["ws"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "2.33.0", features = ["yaml"] }
lazy_static = "1.4.0"

# Dynamic stuff.. technically we should get these from the metadata..
# node-primitives = { git = "https://github.com/paritytech/substrate", branch = "master" }
node-primitives = { package = "polkadot-primitives", git = "https://github.com/paritytech/polkadot", branch = "master" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot/", branch = "master" }

sc-rpc-api = "0.8.0-alpha.8"
sp-core = { version = "2.0.0-alpha.8", features = ["std", "full_crypto"] }
sp-runtime = "2.0.0-alpha.8"
sp-phragmen = "2.0.0-alpha.8"
sp-io = "2.0.0-alpha.8"
frame-support = "2.0.0-alpha.8"
frame-system = "2.0.0-alpha.8"
pallet-staking = "2.0.0-alpha.8"
pallet-identity = "2.0.0-alpha.8"
pallet-indices = "2.0.0-alpha.8"
pallet-balances = "2.0.0-alpha.8"
pallet-transaction-payment-rpc-runtime-api = "2.0.0-alpha.8"
