[package]
name = "offline-phragmen"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
async-std = "1.2.0"
url = "1.7.0"
log = "0.4.8"
env_logger = "0.7.1"
separator = "0.4.1"
hex = "0.4"
hex-literal = "0.2.1"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", rev = "a0bea41c4f37125fa742ec48b12e11cf55c592b5", features = ["ws"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "2.33.0", features = ["yaml"] }
lazy_static = "1.4.0"

# Dynamic stuff.. technically we should get these from the metadata..
# node-primitives = { git = "https://github.com/paritytech/substrate", branch = "master" }
node-primitives = { package = "polkadot-primitives", git = "https://github.com/paritytech/polkadot", branch = "offchain-phragmen-v0.7.33" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot/", branch = "offchain-phragmen-v0.7.33" }

# This commit rev must come from the lock file of the associated version of kusama runtime above.
sc-rpc-api = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb", features = ["std", "full_crypto"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
sp-phragmen = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
sp-version = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
pallet-staking = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
pallet-identity = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
pallet-indices = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "e7457b1eb" }
