[package]
name = "offline-phragmen"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Only update after https://github.com/async-rs/async-std/pull/799 is merged.
async-std = { version = "1.2.0", features = ["attributes"] }
url = "2.1.1"
log = "0.4.8"
env_logger = "0.7.1"
separator = "0.4.1"
hex = "0.4"
hex-literal = "0.2.1"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee/", rev = "a0bea41c4f37125fa742ec48b12e11cf55c592b5", features = ["ws"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "2.33.1", features = ["yaml"] }
lazy_static = "1.4.0"
textplots = "0.5.1"
atomic_refcell = "0.1.6"
ansi_term = "0.12.1"

sub-storage = { path = "./sub-storage" }

# Dynamic stuff.. technically we should get these from the metadata.. For now we use our branch in
# lockstep with polkadot repo.
node-primitives = { package = "polkadot-primitives", git = "https://github.com/paritytech/polkadot", branch = "offline-phragmen-v0.8.8" }
node-runtime = { package = "kusama-runtime", git = "https://github.com/paritytech/polkadot/", branch = "offline-phragmen-v0.8.8" }
# node-runtime = { path = "../substrate/bin/node/runtime" }

# This commit rev must come from the lock file of the associated version of kusama runtime above.
sc-rpc-api = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
sp-version = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
frame-metadata = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
pallet-staking = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
pallet-identity = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
pallet-indices = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
