[package]
name = "laboratory"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.2.0", features = ["attributes"] }
jsonrpsee = { version = "0.1.0", features = ["ws"] }
url = "2.1.1"
log = "0.4.8"
env_logger = "0.7.1"
separator = "0.4.1"
hex = "0.4"
hex-literal = "0.2.1"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "2.33.1", features = ["yaml"] }
lazy_static = "1.4.0"
textplots = "0.5.1"
ansi_term = "0.12.1"
structopt = { version = "0.3" }

sub-storage = { path = "../sub-storage", features = ["helpers"] }

# Dynamic stuff.. technically we should get these from the metadata.. For now we use our branch in
# lockstep with polkadot repo.
node-primitives = { package = "polkadot-primitives", git = "https://github.com/paritytech/polkadot", branch = "offline-phragmen-v0.8.11" }
# Only compile one based on features.
kusama-runtime = { git = "https://github.com/paritytech/polkadot/", branch = "offline-phragmen-v0.8.11", optional = true }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot/", branch = "offline-phragmen-v0.8.11", optional = true }

# node-runtime = { path = "../substrate/bin/node/runtime" }

# This commit rev must come from the lock file of the associated version of kusama runtime above.
sc-rpc-api = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
sp-version = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
frame-metadata = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
pallet-staking = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
pallet-indices = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
pallet-identity = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "31c3e06ded197bdf28130ac0c5310283b2d1b5b3" }

[features]
default = ["polkadot"]
polkadot = [ "polkadot-runtime" ]
kusama = [ "kusama-runtime" ]
