[package]
name = "laboratory"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
log = "0.4.8"
env_logger = "0.7.1"
hex-literal = "0.2.1"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
clap = { version = "2.33.1", features = ["yaml"] }
structopt = { version = "0.3" }

sub-storage = { path = "../sub-storage", features = ["helpers"] }

frame-support = { version = "3.0.0" }
frame-system = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }

[features]
default = []
