[package]
name = "migration-dry-run"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
jsonrpsee-types = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }
jsonrpsee-http-client = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }
jsonrpsee-ws-client = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.8.2"
log = "0.4.13"
hex-literal = "0.3.1"

node-runtime = { package = "kusama-runtime", path = "../../polkadot/runtime/kusama" }

# Local deps
remote-externalities = { path = "../remote-externalities" }
sub-storage = { path = "../sub-storage" }

# Substrate deps. It really doesn't matter we use here, if it overlaps with the patch list, it will
# be covered.
frame-support = { path = "../../substrate/frame/support" }

[workspace]

[patch.crates-io]
# These are all the relevant dependencies that this repsitory uses for substrate. We always want
# them to point to the sibling substrate
sp-core = { path = "../../substrate/primitives/core" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-io = { path = "../../substrate/primitives/io" }
sp-version = { path = "../../substrate/primitives/version" }

frame-system = { path = "../../substrate/frame/system" }
frame-support = { path = "../../substrate/frame/support" }
frame-metadata = { path = "../../substrate/frame/metadata" }
