[package]
name = "offline-election"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[[bin]]
name = "debugkit"
path = "src/main.rs"

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
jsonrpsee = { version = "0.1.0", features = ["ws"] }
url = "2.1.1"
log = "0.4.11"
env_logger = "0.7.1"
hex = "0.4"
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.60" }
lazy_static = "1.4.0"
atomic_refcell = "0.1.6"
ansi_term = "0.12.1"
structopt = { version = "0.3" }

sub-storage = { path = "../sub-storage", features = ["helpers"] }
sub-tokens = { path = "../sub-tokens" }
remote-externalities = { path = "../remote-externalities" }

sp-core = { version = "2.0.0" }
sp-io = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }
sp-npos-elections = { version = "2.0.0" }
frame-support = { version = "2.0.0" }
frame-system = { version = "2.0.0" }
pallet-staking = { version = "2.0.0" }
pallet-staking-reward-curve = { version = "2.0.0" }
pallet-balances = { version = "2.0.0" }
pallet-session = { version = "2.0.0" }
pallet-timestamp = { version = "2.0.0" }


[dev-dependencies]
assert_cmd = "1.0.1"
sp-std = {version = "2.0.0"}
sp-arithmetic = { version = "2.0.0"}
substrate-test-utils = { version = "2.0.0"}

[features]
default = []
remote-test-kusama = []
remote-test-polkadot = []
