[package]
name = "offline-election"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
jsonrpsee-types = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }
jsonrpsee-http-client = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }
jsonrpsee-ws-client = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }
url = "2.1.1"
log = "0.4.11"
env_logger = "0.7.1"
hex = "0.4"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0" }
lazy_static = "1.4.0"
atomic_refcell = "0.1.6"
ansi_term = "0.12.1"
structopt = { version = "0.3" }

sub-storage = { path = "../sub-storage", features = ["helpers"] }
sub-tokens = { path = "../sub-tokens" }
remote-externalities = { path = "../remote-externalities" }

sp-core = { version = "3.0.0" }
sp-io = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-npos-elections = { version = "3.0.0" }
frame-support = { version = "3.0.0" }
frame-system = { version = "3.0.0" }
pallet-staking = { version = "3.0.0" }
pallet-staking-reward-curve = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }
pallet-session = { version = "3.0.0" }


[dev-dependencies]
assert_cmd = "1.0.1"

[features]
default = []
remote-test-kusama = []
remote-test-polkadot = []
