[package]
name = "mock-runtime"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = "0.4.11"
env_logger = "0.7.1"
hex-literal = "0.3.1"
separator = "0.4.1"

remote-externalities = { path = "../remote-externalities" }
sub-storage = { path = "../sub-storage" }

sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-core = { path = "../../substrate/primitives/core" }
frame-support = { path = "../../substrate/frame/support" }
frame-system = { path = "../../substrate/frame/system" }

# Add any other pallet that you might want to test here.
pallet-society = { path = "../../substrate/frame/society" }
pallet-staking = { path = "../../substrate/frame/staking" }
pallet-balances = { path = "../../substrate/frame/balances" }

[patch.crates-io]
# Only the deps of sub-storage
sp-core = { path = "../../substrate/primitives/core" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-io = { path = "../../substrate/primitives/io" }
sp-version = { path = "../../substrate/primitives/version" }
frame-support = { path = "../../substrate/frame/support" }

[workspace]
