[package]
name = "remote-externalities"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
async-std = { version = "1.6.2" }
jsonrpsee = { version = "0.1.0", features = ["ws"] }
separator = "0.4.1"
ansi_term = "0.12.1"
env_logger = "0.7.1"
log = "0.4.8"

sub-storage = { path = "../sub-storage" }
sp-io = { version = "2.0.0-rc4" }
sp-core = { version = "2.0.0-rc4" }
sp-externalities = { version = "0.8.0-rc4" }

[dev-dependencies]
hex-literal = "0.2.1"
tokio-test = "0.2.1"
frame-system = { version = "2.0.0-rc4" }
frame-support = { version = "2.0.0-rc4" }
pallet-staking = { version = "2.0.0-rc4" }
sp-runtime = { version = "2.0.0-rc4" }






















