[package]
name = "remote-externalities"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
async-std = { version = "1.6.2" }
jsonrpsee = { version = "0.1.0", features = ["ws"] }
separator = "0.4.1"
ansi_term = "0.12.1"
env_logger = "0.7.1"
log = "0.4.11"

sub-storage = { path = "../sub-storage" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }

[dev-dependencies]
hex-literal = "0.3.1"
tokio-test = "0.2.1"
frame-system = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
