[package]
name = "remote-externalities"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
# codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
jsonrpsee-types = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }
jsonrpsee-http-client = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }
jsonrpsee-ws-client = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }

hex-literal = "0.3.1"
env_logger = "0.8.2"
log = "0.4.11"
bincode = "1.3.1"

sp-io = { version = "2.0.1" }
sp-core = { version = "2.0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
remote-test-kusama = []
remote-test-polkadot = []
