[package]
name = "staking-miner"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
jsonrpsee = { version = "0.1.0", features = ["ws"] }
log = "0.4.11"
env_logger = "0.7.1"
separator = "0.4.1"
hex = "0.4"
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.114", features = ["derive"] }
ansi_term = "0.12.1"

sub-storage = { path = "../sub-storage", features = ["helpers"] }
remote-externalities = { path = "../remote-externalities" }

sp-core = { path = "../../substrate/primitives/core" }
sp-io = { path = "../../substrate/primitives/io" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-npos-elections = { path = "../../substrate/primitives/npos-elections" }
frame-support = { path = "../../substrate/frame/support" }
frame-system = { path = "../../substrate/frame/system" }
pallet-staking = { path = "../../substrate/frame/staking" }
pallet-staking-reward-curve = { path = "../../substrate/frame/staking/reward-curve" }
pallet-balances = { path = "../../substrate/frame/balances" }
pallet-session = { path = "../../substrate/frame/session" }
pallet-timestamp = { path = "../../substrate/frame/timestamp" }
