[package]
name = "staking-miner"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
log = "0.4.11"
env_logger = "0.7.1"
separator = "0.4.1"
hex = "0.4"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.114", features = ["derive"] }
ansi_term = "0.12.1"
clt = "0.0.6"

sub-storage = { path = "../sub-storage", features = ["helpers"] }
remote-externalities = { git = "https://github.com/paritytech/substrate", branch = "master" }

sp-core = { version = "3.0.0" }
sp-io = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-npos-elections = { version = "3.0.0" }
frame-support = { version = "3.0.0" }
frame-system = { version = "3.0.0" }
pallet-staking = { version = "3.0.0" }
pallet-staking-reward-curve = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }
pallet-session = { version = "3.0.0" }
pallet-timestamp = { version = "3.0.0" }
parking_lot = "0.10.2"
