[package]
name = "sub-du"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
jsonrpsee = { version = "0.1.0", features = ["ws"] }
separator = "0.4.1"
ansi_term = "0.12.1"
env_logger = "0.7.1"
log = "0.4.8"
structopt = { version = "0.3" }

sub-storage = { path = "../sub-storage", features = ["helpers"] }
frame-metadata = "11.0.0-rc4"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

[dev-dependencies]
assert_cmd = "1.0.1"
