[package]
name = "sub-du"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
async-std = { version = "1.6.2", features = ["attributes"] }
jsonrpsee = { version = "0.1.0", features = ["ws"] }
separator = "0.4.1"
ansi_term = "0.12.1"
env_logger = "0.7.1"
log = "0.4.8"
structopt = { version = "0.3" }

sub-storage = { path = "../sub-storage", features = ["helpers"] }
frame-metadata = { path = "../../substrate/frame/metadata" }

[dev-dependencies]
assert_cmd = "1.0.1"











