[package]
name = "sub-storage"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
jsonrpsee = { version = "0.1.0", features = ["ws"] }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
frame-metadata = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }

# Optional for helpers only.
frame-system = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain", optional = true }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" , optional = true }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain", optional = true }
ansi_term = { version = "0.12.1", optional = true }

[dev-dependencies]
async-std = { version = "1.6.3" }
hex-literal = "0.3.1"
frame-system = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "kiz-fix-proxy-election-drain" }

[features]
default = []
helpers = [
	"frame-system",
	"pallet-identity",
	"pallet-balances",
	"ansi_term",
]
