[package]
name = "sub-storage"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.114", features = ["derive"] }
jsonrpsee = { version = "0.1.0", features = ["ws"] }

sp-core = { version = "2.0.0" }
frame-support = { version = "2.0.0" }
sp-version = { version = "2.0.0" }
frame-metadata = { version = "12.0.1" }

# Optional for helpers only.
frame-system = { version = "2.0.0", optional = true }
pallet-identity = { version = "2.0.0", optional = true }
pallet-balances = { version = "2.0.0", optional = true }
ansi_term = { version = "0.12.1", optional = true }

[dev-dependencies]
async-std = { version = "1.7.0" }
hex-literal = "0.3.1"
hex = "0.4.2"
frame-system = { version = "2.0.0" }
pallet-balances = { version = "2.0.0" }
pallet-staking = { version = "2.0.0" }
pallet-proxy = { version = "2.0.0" }

[features]
remote-test-kusama = []
remote-test-polkadot = []
build-docs = []
default = []
helpers = [
	"frame-system",
	"pallet-identity",
	"pallet-balances",
	"ansi_term",
]
