[package]
name = "sub-storage"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.114", features = ["derive"] }

jsonrpsee-types = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }
jsonrpsee-http-client = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }
jsonrpsee-ws-client = { git = "https://github.com/paritytech/jsonrpsee", rev = "4025c0f67298ab7216214feac4e2c29ca9b24710" }

sp-core = { version = "3.0.0" }
sp-version = { version = "3.0.0" }
frame-support = { version = "3.0.0" }
frame-metadata = { version = "13.0.0" }

# Optional for helpers only.
frame-system = { version = "3.0.0", optional = true }
pallet-identity = { version = "3.0.0", optional = true }
pallet-balances = { version = "3.0.0", optional = true }
ansi_term = { version = "0.12.1", optional = true }

[dev-dependencies]
async-std = { version = "1.9.0" }
tokio = { version = "1", features = ["full"] }
hex-literal = "0.3.1"
hex = "0.4.2"
frame-system = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }
pallet-staking = { version = "3.0.0" }
pallet-proxy = { version = "3.0.0" }

[features]
remote-test-kusama = []
remote-test-polkadot = []
default = []
helpers = [
	"frame-system",
	"pallet-identity",
	"pallet-balances",
	"ansi_term",
]
