[package]
name = "substrate-runtime-dry-run"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
codec = { package = "parity-scale-codec", version = "1.3.6" }
trie-root = "0.16.0"
jsonrpsee = { version = "0.1.0", features = ["ws"] }

# Substrate
sp-core = { path = "../../substrate/primitives/core" }
sp-tracing = { path = "../../substrate/primitives/tracing" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
frame-support = { path = "../../substrate/frame/support" }
frame-system = { path = "../../substrate/frame/system" }

# Node
# node-runtime = { package = "polkadot-runtime", git = "https://github.com/paritytech/polkadot/", branch = "substrate-runtime-dryrun-v027" }
node-runtime = { package = "node-runtime", path = "./../../substrate/bin/node/runtime" }
target-pallet = { package = "pallet-two-phase-election-provider", path = "./../../substrate/frame/two-phase-election-provider" }

# Local
sub-storage = { path = "../sub-storage" }
remote-externalities = { path = "../remote-externalities" }

