[package]
name = "remote-ext-elections-phragmen"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

# This cannot be in the global workspace due to dependency gitch.
[workspace]

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sub-storage = { path = "../sub-storage" }
log = "0.4.11"
env_logger = "0.8.1"
hex-literal = "0.3.1"
hex = "0.4.2"
chrono = "0.4.19"
paste = "1.0.2"
json = "0.12.4"
reqwest = { version = "0.10.8", features = ["blocking"] }

remote-externalities = { path = "../remote-externalities" }
sub-tokens = { path = "../sub-tokens" }

sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-core = { path = "../../substrate/primitives/core" }
frame-support = { path = "../../substrate/frame/support" }
frame-system = { path = "../../substrate/frame/system" }

pallet-elections-phragmen = { path = "../../substrate/frame/elections-phragmen" }
pallet-elections-phragmen-faulty = { path = "../../substrate/frame/elections-phragmen-faulty" }
pallet-balances = { path = "../../substrate/frame/balances" }
pallet-timestamp = { path = "../../substrate/frame/timestamp" }

[features]
default = []
kusama = []
