[package]
name = "remote-ext-phragmms"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

# This cannot be in the global workspace due to dependency gitch.
[workspace]

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
remote-externalities = { path = "../remote-externalities" }
sub-storage = { path = "../sub-storage" }
logging_timer = "1.0.0"
log = "0.4.11"
env_logger = "0.7.1"
hex-literal = "0.3.1"
csv = "1.1.3"

sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-core = { path = "../../substrate/primitives/core" }
sp-npos-elections = { path = "../../substrate/primitives/npos-elections" }

frame-support = { path = "../../substrate/frame/support" }
frame-system = { path = "../../substrate/frame/system" }
pallet-staking = { path = "../../substrate/frame/staking" }
pallet-staking-reward-curve = { path = "../../substrate/frame/staking/reward-curve" }
pallet-balances = { path = "../../substrate/frame/balances" }
pallet-session = { path = "../../substrate/frame/session" }
pallet-timestamp = { path = "../../substrate/frame/timestamp" }
