[package]
name = "remote-ext-elections-phragmen"
version = "0.1.0"
authors = ["kianenigma <kian.peymani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
remote-externalities = { path = "../remote-externalities" }
sub-storage = { path = "../sub-storage" }
log = "0.4.11"
env_logger = "0.7.1"
hex-literal = "0.3.1"


sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-core = { path = "../../substrate/primitives/core" }
frame-support = { path = "../../substrate/frame/support" }
frame-system = { path = "../../substrate/frame/system" }

pallet-elections-phragmen = { path = "../../substrate/frame/elections-phragmen" }
pallet-balances = { path = "../../substrate/frame/balances" }
